Update 104.2 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.2 Maintain the integritu of filesystems/104.2 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.2 Maintain the integritu of filesystems/104.2 Lesson 1.md
@@ -453,9 +453,13 @@ No modify flag set, skipping filesystem flush and exiting.
 # Упражнения для закрепления
 
 1. Используя `du`, как мы можем проверить, сколько места используется только файлами в текущем каталоге?
+
 2. Используя `df`, перечислите информацию для каждой файловой системы ext4 с выходными данными, включая следующие поля, по порядку: устройство, точка монтирования, общее количество inodes, количество доступных inodes, процент свободного места.
+
 3. Какая команда запускает `e2fsck` на `/dev/sdc1` в неинтерактивном режиме, пытаясь автоматически исправить большинство ошибок?
+
 4. Предположим, `/dev/sdb1` - файловая система ext2. Как вы можете преобразовать его в ext3, и в то же время сбросить его счетчик монтирования и изменить его метку на `UserData`?
+
 5. Как вы можете проверить наличие ошибок в файловой системе XFS, не исправляя обнаруженные повреждения?
 
 
@@ -508,5 +512,68 @@ $ du -h
 
 # Ответы на упражнения для закрепления
 
+1. Используя `du`, как мы можем проверить, сколько места используется только файлами в текущем каталоге?
+>Во-первых, используйте параметр -S, чтобы отделить вывод текущего каталога от его подкаталогов. Затем используйте -d 0, чтобы ограничить глубину вывода до нуля, что означает «без подкаталогов». Не забудьте -h, чтобы получить вывод в «удобочитаемом» формате:
+```
+$ du -S -h -d 0
+```
+или
+```
+$ du -Shd 0
+```
+
+2. Используя `df`, перечислите информацию для каждой файловой системы ext4 с выходными данными, включая следующие поля, по порядку: устройство, точка монтирования, общее количество inodes, количество доступных inodes, процент свободного места.
+>Вы можете фильтровать файловые системы с помощью параметра `-t`, за которым следует имя файловой системы. Чтобы получить необходимый результат, используйте `--output = source, target, itotal, iavail, pcent`. Итак, ответ такой:
+```
+$ df -t ext4 --output=source,target,itotal,iavail,pcent
+```
+
+3. Какая команда запускает `e2fsck` на `/dev/sdc1` в неинтерактивном режиме, пытаясь автоматически исправить большинство ошибок?
+>Параметр для автоматического исправления большинства ошибок - `-p`. Итак, ответ таков:
+```
+# e2fsck -p /dev/sdc1
+```
+
+4. Предположим, `/dev/sdb1` - файловая система ext2. Как вы можете преобразовать его в ext3, и в то же время сбросить его счетчик монтирования и изменить его метку на `UserData`?
+>Помните, что преобразование файловой системы ext2 в ext3 - это просто вопрос добавления журнала, что можно сделать с помощью параметра `-j`. Чтобы сбросить счетчик монтирования, используйте `-c 0`. Чтобы изменить метку, используйте `-L UserData`. Правильный ответ:
+```
+# tune2fs -j -c 0 -L UserData /dev/sdb1
+```
+5. Как вы можете проверить наличие ошибок в файловой системе XFS, не исправляя обнаруженные повреждения?
+>Используйте параметр `-n`, как в `xfs -n`, за которым следует соответствующее устройство.
+
 
 # Ответы на упражнения для размышления
+
+1. Предположим, у вас есть файловая система ext4 на `/dev/sda1` со следующими параметрами, полученными с помощью `tune2fs`:
+```
+Mount count:              8
+Maximum mount count:      -1
+```
+Что будет при следующей загрузке, если будет введена команда `tune2fs -c 9 /dev/sda1`?
+>Команда установит максимальное количество монтируемых файлов для файловой системы равным 9. Поскольку в настоящее время оно равно 8, следующая загрузка системы вызовет проверку файловой системы.
+
+2. Рассмотрим следующий вывод `du -h`:
+```
+$ du -h
+216K	./somedir/anotherdir
+224K	./somedir
+232K	.
+```
+Сколько места занимают только файлы в текущем каталоге? Как мы могли бы переписать команду, чтобы эта информация отображалась более четко?
+>Из общего количества используемых 232 Кбайт, 224 Кбайт используются подкаталогом `somedir` и его подкаталогами. Итак, исключая их, у нас есть 8 КБ, занятых файлами в текущем каталоге. Эту информацию можно более четко показать с помощью параметра `-S`, который разделяет каталоги в счетчике.
+
+3. Что произойдет с файловой системой ext2 `/dev/sdb1`, если будет введена указанная ниже команда?
+```
+# tune2fs -j /dev/sdb1 -J device=/dev/sdc1 -i 30d
+```
+>Журнал будет добавлен в / dev / sdb1, преобразовав его в ext3. Журнал будет храниться на устройстве / dev / sdc1, а файловая система будет проверяться каждые 30 дней.
+
+4. Как мы можем проверить наличие ошибок в файловой системе XFS на `/dev/sda1`, которая имеет раздел журнала на `/dev/sdc1`, без фактического ремонта?
+>Используйте xfs_repair, за которым следует -l / dev / sdc1, чтобы указать устройство, содержащее раздел журнала, и -n, чтобы избежать внесения каких-либо изменений.
+```
+# xfs_repair -l /dev/sdc1 -n
+```
+
+5. В чем разница между параметрами `-T` и `-t` для `df`?
+>Параметр `-T` будет включать тип каждой файловой системы в вывод `df`. `-t` - это фильтр, который будет показывать на выходе только файловые системы данного типа, исключая все остальные.
