Update 104.2 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.2 Maintain the integritu of filesystems/104.2 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.2 Maintain the integritu of filesystems/104.2 Lesson 1.md
@@ -31,7 +31,7 @@ $ du
 $ du -h
 4.8M	.
 ```
-По умолчанию du показывает только счетчик использования каталогов (учитывая все файлы и подкаталоги внутри него). Чтобы показать индивидуальный счетчик для всех файлов в каталоге, используйте параметр `-a`:
+По умолчанию `du` показывает только счетчик использования каталогов (учитывая все файлы и подкаталоги внутри него). Чтобы показать индивидуальный счетчик для всех файлов в каталоге, используйте параметр `-a`:
 ```
 $ du -ah
 432K	./geminoid.jpg
@@ -72,7 +72,7 @@ $ du -Shc
 1.3M	.
 6.0M	total
 ```
-Вы можете контролировать, насколько «глубоким» должен быть вывод du с помощью параметра `-d N`, где `N` описывает уровни. Например, если вы используете параметр `-d 1`, он покажет текущий каталог и его подкаталоги, но не их подкаталоги.
+Вы можете контролировать, насколько «глубоким» должен быть вывод `du` с помощью параметра `-d N`, где `N` описывает уровни. Например, если вы используете параметр `-d 1`, он покажет текущий каталог и его подкаталоги, но не их подкаталоги.
 
 Смотрите разницу ниже. Без `-d`:
 ```
@@ -111,7 +111,6 @@ $ du -ah --exclude="*.bin"
 8.0K	./Contra_Main.asm
 180K	.
 ```
-
 Обратите внимание, что общая сумма больше не отражает размер исключенных файлов.
 
 
@@ -153,7 +152,7 @@ tmpfs           582M  116K  582M   1% /run/user/1000
 /dev/sdb2        89M  1.9M   81M   3% /media/carol/part2
 /dev/sdc1       299G  223G   76G  75% /media/carol/Samsung Externo
 ```
-Вы также можете использовать параметр `-i` для отображения используемых / доступных inode вместо блоков:
+Вы также можете использовать параметр `-i` для отображения используемых/доступных inode вместо блоков:
 ```
 $ df -i
 Filesystem      Inodes  IUsed   IFree IUse% Mounted on
@@ -293,7 +292,7 @@ DT_2GB: clean, 20/121920 files, 369880/487680 blocks
 
 Специальная утилита для файловых систем ext2, ext3 и ext4 - это `e2fsck`, также называемая `fsck.ext2`, `fsck.ext3` и `fsck.ext4` (эти три являются просто ссылками на `e2fsck`). По умолчанию он работает в интерактивном режиме: при обнаружении ошибки файловой системы он останавливается и спрашивает пользователя, что делать. Пользователь должен ввести `y`, чтобы исправить проблему, `n`, чтобы оставить ее нерешенной, или `a`, чтобы исправить текущую проблему и все последующие.
 
-Конечно, сидеть перед терминалом и ждать, пока e2fsck спросит, что делать, - непродуктивное использование вашего времени, особенно если вы имеете дело с большой файловой системой. Итак, есть параметры, которые заставляют `e2fsck` работать в неинтерактивном режиме:
+Конечно, сидеть перед терминалом и ждать, пока `e2fsck` спросит, что делать, - непродуктивное использование вашего времени, особенно если вы имеете дело с большой файловой системой. Итак, есть параметры, которые заставляют `e2fsck` работать в неинтерактивном режиме:
 
 `-p` - Это попытается автоматически исправить все обнаруженные ошибки. Если обнаружена ошибка, требующая вмешательства системного администратора, `e2fsck` предоставит описание проблемы и завершит работу.
 
@@ -366,13 +365,16 @@ Checksum:                 0xe084fe23
 
 Также можно определить временной интервал между проверками с помощью параметра `-i`, за которым следует число и буквы `d` для дней, `m` для месяцев и `y` для лет. Например, `-i 10d` будет проверять файловую систему при следующей перезагрузке каждые 10 дней. Используйте ноль в качестве значения, чтобы отключить эту функцию.
 
-`-L` можно использовать для установки метки для файловой системы. Эта метка может содержать до 16 символов. Параметр `-U` устанавливает UUID для файловой системы, который представляет собой 128-битное шестнадцатеричное число.  приведенном выше примере UUID - `6e2c12e3-472d-4bac-a257-c49ac07f3761`. И метку, и UUID можно использовать вместо имени устройства (например, `/dev/sda1`) для монтирования файловой системы.
+`-L` можно использовать для установки метки для файловой системы. Эта метка может содержать до 16 символов. Параметр `-U` устанавливает UUID для файловой системы, который представляет собой 128-битное шестнадцатеричное число. В приведенном выше примере UUID - `6e2c12e3-472d-4bac-a257-c49ac07f3761`. И метку, и UUID можно использовать вместо имени устройства (например, `/dev/sda1`) для монтирования файловой системы.
 
 Параметр `-e BEHAVIOR` определяет поведение ядра при обнаружении ошибки файловой системы. Возможны три варианта поведения:
 
 `continue` - Продолжит выполнение в обычном режиме.
+
 `remount-ro` - Перемонтирует файловую систему как доступную только для чтения.
+
 `panic` - Вызовет a kernel panic.
+
 
 Поведение по умолчанию - продолжить. `remount-ro` может быть полезен в приложениях, чувствительных к данным, поскольку он немедленно останавливает запись на диск, избегая большего количества потенциальных ошибок.
 
@@ -380,7 +382,7 @@ Checksum:                 0xe084fe23
 ```
 # tune2fs -j /dev/sda1
 ```
-После этого при монтировании преобразованной файловой системы не забудьте установить тип `ext3`, чтобы можно было использовать журнал. 
+После этого при монтировании преобразованной файловой системы не забудьте установить тип ext3, чтобы можно было использовать журнал. 
 
 При работе с журналируемыми файловыми системами параметр `-J` позволяет вам использовать дополнительные параметры для установки некоторых параметров журнала, например `-J size =` для установки размера журнала (в мегабайтах), `-J location =` указать, где должен храниться журнал (либо конкретный блок, либо определенная позиция на диске с суффиксами, такими как `M` или `G`), и даже поместить журнал на внешнее устройство с помощью `-J device =`.
 
