Update 104.3 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.3 Control mounting and unmounting of filesystem/104.3 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.3 Control mounting and unmounting of filesystem/104.3 Lesson 1.md
@@ -9,3 +9,92 @@
 
 
 # Введение
+
+Ранее вы узнали как разбивать диски на разделы, а также как создавать и настравиать на них файловые системы. Однако, прежде чем к файловой системе получить доступ в Linux, ее необходимо смонтировать.
+
+Прикрепление файловой системы к определенной точке в дереве каталогов вашей системы называется точкой монтирования. Файловые системы можно монтировать вручную или автоматически, и есть много способов сделать это. О некоторых из них мы узнаем в этом уроке.
+
+
+# Монтирование и размонтирование файловых систем
+
+Команда для ручного монтирования файловой системы называется `mount` и имеет синтаксис:
+```
+mount -t TYPE DEVICE MOUNTPOINT
+```
+Где:
+
+`TYPE` - Тип монтируемой файловой системы (например, ext4, btrfs, exfat и т. д.).
+`DEVICE` - Имя раздела, содержащего файловую систему (например, /dev/sdb1)
+`MOUNTPOINT` - Где будет смонтирована файловая система. Примонтированный каталог не обязательно должен быть пустым, хотя он должен существовать. Однако любые файлы в нем будут недоступны по имени, пока файловая система смонтирована.
+
+Например, чтобы смонтировать USB-накопитель, содержащий файловую систему exFAT, расположенный на '/dev/sdb1', в каталог 'flash' в вашем домашнем каталоге, вы можете использовать:
+```
+# mount -t exfat /dev/sdb1 ~/flash/
+```
+>Многие системы Linux используют оболочку Bash, и в них тильда `~` на пути к точке монтирования является сокращением для домашнего каталога текущего пользователя. Например, если текущего пользователя зовут `john`, он будет заменен на `/home/john`.
+
+После монтирования содержимое файловой системы будет доступно в каталоге `~/flash`:
+```
+$  ls -lh ~/flash/
+total 469M
+-rwxrwxrwx 1 root root 454M jul 19 09:49 lineage-16.0-20190711-MOD-quark.zip
+-rwxrwxrwx 1 root root  16M jul 19 09:44 twrp-3.2.3-mod_4-quark.img
+```
+
+
+# Вывод подключенных файловых систем
+
+Если вы наберете просто `mount`, вы получите список всех файловых систем, смонтированных в настоящее время в вашей системе. Этот список может быть довольно большим, потому что помимо дисков, подключенных к вашей системе, он также содержит ряд исполняемых файловых систем в памяти, которые служат различным целям. Чтобы отфильтровать вывод, вы можете использовать параметр `-t` для вывода списка только файловых систем соответствующего типа, как показано ниже:
+```
+# mount -t ext4
+/dev/sda1 on / type ext4 (rw,noatime,errors=remount-ro)
+```
+Вы можете указать несколько файловых систем одновременно, разделив их запятыми:
+```
+# mount -t ext4,fuseblk
+/dev/sda1 on / type ext4 (rw,noatime,errors=remount-ro)
+/dev/sdb1 on /home/carol/flash type fuseblk (rw,nosuid,nodev,relatime,user_id=0,group_id=0,default_permissions,allow_other,blksize=4096) [DT_8GB]
+```
+Вывод в приведенных выше примерах можно описать в формате:
+```
+SOURCE on TARGET type TYPE OPTIONS
+```
+Где `SOURCE` - это раздел, содержащий файловую систему, `TARGET` - это каталог, в котором он смонтирован, `TYPE` - это тип файловой системы, а `OPTIONS` - это параметры, переданные команде монтирования во время монтирования.
+
+
+# Дополнительные параметры командной строки
+
+Есть много параметров командной строки, которые можно использовать с `mount`. Вот некоторые из наиболее часто используемых:
+
+-a 
+>Это смонтирует все файловые системы, перечисленные в файле `/etc/fstab` (подробнее об этом в следующем разделе).
+
+-o или --options
+>Это передаст список параметров монтирования, разделенных запятыми, в команду `mount`, которая может изменить способ монтирования файловой системы. Это также будет обсуждаться вместе с файлом `/etc/fstab`.
+
+-r или -ro
+>Это смонтирует файловую систему как доступную только для чтения.
+
+-w или -rw
+>то сделает файловую систему монтируемой как доступной для записи.
+
+Чтобы размонтировать файловую систему, используйте команду `umount`, за которой следует имя устройства или точка монтирования. Учитывая приведенный выше пример, приведенные ниже команды взаимозаменяемы:
+```
+# umount /dev/sdb1
+# umount ~/flash
+```
+
+Некоторые из параметров командной строки для `umount`:
+
+-a
+>Это отключит все файловые системы, перечисленные в `/etc/fstab`.
+
+-f
+>Это приведет к отключению файловой системы. Это может быть полезно, если вы смонтировали удаленную файловую систему, которая стала недоступной.
+
+-r
+>Если файловая система не может быть размонтирована, она попытается сделать ее доступной только для чтения.
+
+
+# Работа с открытыми файлами
+
