Update 104.3 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.3 Control mounting and unmounting of filesystem/104.3 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.3 Control mounting and unmounting of filesystem/104.3 Lesson 1.md
@@ -24,10 +24,12 @@ mount -t TYPE DEVICE MOUNTPOINT
 Где:
 
 `TYPE` - Тип монтируемой файловой системы (например, ext4, btrfs, exfat и т. д.).
+
 `DEVICE` - Имя раздела, содержащего файловую систему (например, /dev/sdb1)
+
 `MOUNTPOINT` - Где будет смонтирована файловая система. Примонтированный каталог не обязательно должен быть пустым, хотя он должен существовать. Однако любые файлы в нем будут недоступны по имени, пока файловая система смонтирована.
 
-Например, чтобы смонтировать USB-накопитель, содержащий файловую систему exFAT, расположенный на '/dev/sdb1', в каталог 'flash' в вашем домашнем каталоге, вы можете использовать:
+Например, чтобы смонтировать USB-накопитель, содержащий файловую систему exFAT, расположенный на `/dev/sdb1`, в каталог `flash` в вашем домашнем каталоге, вы можете использовать:
 ```
 # mount -t exfat /dev/sdb1 ~/flash/
 ```
