Update 104.3 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.3 Control mounting and unmounting of filesystem/104.3 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.3 Control mounting and unmounting of filesystem/104.3 Lesson 1.md
@@ -100,3 +100,20 @@ SOURCE on TARGET type TYPE OPTIONS
 
 # Работа с открытыми файлами
 
+При размонтировании файловой системы вы можете столкнуться с сообщением об ошибке о том, что `target is busy`. Это происходит, если какие-либо файлы в файловой системе открыты. Однако может быть не сразу очевидно, где находится открытый файл или к чему осуществляется доступ к файловой системе.
+
+В таких случаях вы можете использовать команду `lsof`, за которой следует имя устройства, содержащего файловую систему, чтобы увидеть список процессов, обращающихся к нему, и какие файлы открыты. Например:
+```
+# umount /dev/sdb1
+umount: /media/carol/External_Drive: target is busy.
+
+# lsof /dev/sdb1
+COMMAND  PID   USER   FD   TYPE DEVICE SIZE/OFF NODE NAME
+evince  3135 carol   16r   REG   8,17 21881768 5195 /media/carol/External_Drive/Documents/E-Books/MagPi40.pdf
+```
+`COMMAND` - это имя исполняемого файла, открывшего файл, а `PID` - это номер процесса. `NAME` - это имя открытого файла. В приведенном выше примере файл `MagPi40.pdf` открывается программой `evince` (просмотрщик PDF-файлов). Если мы закроем программу, мы сможем размонтировать файловую систему.
+
+>Прежде чем появится вывод `lsof`, пользователи `GNOME` могут увидеть предупреждающее сообщение в окне терминала.
+>```lsof: WARNING: can't stat() fuse.gvfsd-fuse file system /run/user/1000/gvfs
+Output information may be incomplete.```
+>`lsof` пытается обработать все смонтированные файловые системы. Это предупреждающее сообщение появляется, потому что `lsof` обнаружил виртуальную файловую систему `GNOME` (GVFS). Это особый случай файловой системы в пространстве пользователя (`FUSE`). Он действует как мост между `GNOME`, его API и ядром. Никто - даже root - не может получить доступ к одной из этих файловых систем, кроме владельца, смонтировавшего ее (в данном случае `GNOME`). Вы можете игнорировать это предупреждение.
