Update 104.3 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.3 Control mounting and unmounting of filesystem/104.3 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.3 Control mounting and unmounting of filesystem/104.3 Lesson 1.md
@@ -114,6 +114,8 @@ evince  3135 carol   16r   REG   8,17 21881768 5195 /media/carol/External_Drive/
 `COMMAND` - это имя исполняемого файла, открывшего файл, а `PID` - это номер процесса. `NAME` - это имя открытого файла. В приведенном выше примере файл `MagPi40.pdf` открывается программой `evince` (просмотрщик PDF-файлов). Если мы закроем программу, мы сможем размонтировать файловую систему.
 
 >Прежде чем появится вывод `lsof`, пользователи `GNOME` могут увидеть предупреждающее сообщение в окне терминала.
->```lsof: WARNING: can't stat() fuse.gvfsd-fuse file system /run/user/1000/gvfs
-Output information may be incomplete.```
+```
+lsof: WARNING: can't stat() fuse.gvfsd-fuse file system /run/user/1000/gvfs
+Output information may be incomplete.
+```
 >`lsof` пытается обработать все смонтированные файловые системы. Это предупреждающее сообщение появляется, потому что `lsof` обнаружил виртуальную файловую систему `GNOME` (GVFS). Это особый случай файловой системы в пространстве пользователя (`FUSE`). Он действует как мост между `GNOME`, его API и ядром. Никто - даже root - не может получить доступ к одной из этих файловых систем, кроме владельца, смонтировавшего ее (в данном случае `GNOME`). Вы можете игнорировать это предупреждение.
