Update 104.3 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.3 Control mounting and unmounting of filesystem/104.3 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.3 Control mounting and unmounting of filesystem/104.3 Lesson 1.md
@@ -119,3 +119,25 @@ lsof: WARNING: can't stat() fuse.gvfsd-fuse file system /run/user/1000/gvfs
 Output information may be incomplete.
 ```
 >`lsof` пытается обработать все смонтированные файловые системы. Это предупреждающее сообщение появляется, потому что `lsof` обнаружил виртуальную файловую систему `GNOME` (GVFS). Это особый случай файловой системы в пространстве пользователя (`FUSE`). Он действует как мост между `GNOME`, его API и ядром. Никто - даже root - не может получить доступ к одной из этих файловых систем, кроме владельца, смонтировавшего ее (в данном случае `GNOME`). Вы можете игнорировать это предупреждение.
+
+
+# Куда смонтировать?
+
+Вы можете смонтировать файловую систему где угодно. Однако есть некоторые передовые методы, которым следует следовать, чтобы упростить системное администрирование.
+
+Традиционно `/mnt` был каталогом, в котором монтируются все внешние устройства, а также ряд предварительно настроенных «точек привязки» для общих устройств, таких как приводы CD-ROM (`/mnt/cdrom`) и гибкие диски (`/mnt/floppy`) внутри него.
+
+Он был заменен на `/media`, который теперь является точкой монтирования по умолчанию для любых съемных носителей (например, внешних дисков, USB-накопителей, устройств чтения карт памяти и т. Д.), подключенных к системе.
+
+В большинстве современных дистрибутивов Linux и окружений рабочего стола съемные устройства автоматически монтируются в `/media/USER/LABEL` при подключении к системе, где `USER` - это имя пользователя, а `LABEL` - это метка устройства. Например, USB-накопитель с меткой `FlashDrive`, подключенный пользователем `john`, будет смонтирован в `/media/john/FlashDrive/`. То, как это делается, зависит от среды рабочего стола.
+
+При этом всякий раз, когда вам нужно вручную смонтировать файловую систему, рекомендуется смонтировать ее в `/mnt`.
+
+
+# Монтирование файловых систем при загрузке
+
+Файл `/etc/fsta` содержит описания файловых систем, которые можно смонтировать. Это текстовый файл, каждая строка которого описывает монтируемую файловую систему с шестью полями в строке в следующем порядке:
+```
+FILESYSTEM MOUNTPOINT TYPE OPTIONS DUMP PASS
+```
+
