Update 104.3 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.3 Control mounting and unmounting of filesystem/104.3 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.3 Control mounting and unmounting of filesystem/104.3 Lesson 1.md
@@ -140,4 +140,67 @@ Output information may be incomplete.
 ```
 FILESYSTEM MOUNTPOINT TYPE OPTIONS DUMP PASS
 ```
+Где:
 
+`FILESYSTEM`
+>Устройство, содержащее монтируемую файловую систему. Вместо устройства вы можете указать UUID или метку раздела, что мы обсудим позже.
+
+`MOUNTPOINT`
+>Где будет смонтирована файловая система.
+
+`TYPE`
+>Тип файловой системы.
+
+`OPTIONS`
+>Параметры монтирования, которые будут переданы в mount.
+
+`DUMP`
+>Указывает, какие файловые системы ext2, ext3 или ext4 следует рассматривать для резервного копирования командой `dump`. Обычно это ноль, что означает, что их следует игнорировать.
+
+`PASS`
+>Если ненулевое значение, определяет порядок, в котором файловые системы будут проверяться при загрузке. Обычно это ноль.
+
+Например, первый раздел на первом диске машины можно описать как:
+```
+/dev/sda1  /  ext4  noatime,errors
+```
+Параметры монтирования в `OPTIONS` представляют собой список параметров, разделенных запятыми, которые могут быть общими или специфичными для файловой системы. Среди общих у нас есть:
+
+`atime` и `noatime`
+>По умолчанию каждый раз при чтении файла обновляется информация о времени доступа. Отключение этого (с помощью `noatime`) может ускорить дисковый ввод-вывод. Не путайте это со временем модификации, которое обновляется каждый раз при записи файла.
+
+`auto` и `noauto`
+>Может ли файловая система (или не может) быть смонтирована автоматически с помощью `mount -a`.
+
+`defaults`
+>Это передаст параметры `rw`, `suid`, `dev`, `exec`, `auto`, `nouser` и `async` для монтирования.
+
+`dev` и `nodev`
+>Следует ли интерпретировать символьные или блочные устройства в смонтированной файловой системе.
+
+`exec` и `noexec`
+>Разрешить или запретить разрешение на выполнение двоичных файлов в файловой системе.
+
+`user` и `nouser`
+>Разрешает (или запрещает) монтировать файловую систему обычному пользователю.
+
+`group`
+>Позволяет пользователю монтировать файловую систему, если пользователь принадлежит к той же группе, которой принадлежит устройство, содержащее ее.
+
+`owner`
+>Позволяет пользователю монтировать файловую систему, если пользователь владеет устройством, содержащим ее.
+
+`suid` и `nosuid`
+>Разрешить или запретить битам SETUID и SETGID вступить в силу.
+
+`ro` и `rw`
+>Смонтируйте файловую систему как доступную только для чтения или запись.
+
+`remount`
+>Это попытается перемонтировать уже смонтированную файловую систему. Это не используется в `/etc/fstab`, но используется как параметр для монтирования `-o`. Например, чтобы перемонтировать уже смонтированный раздел `/dev/sdb1` как доступный только для чтения, вы можете использовать команду `mount -o remount`, `ro /dev/sdb1`. При повторном монтировании вам не нужно указывать тип файловой системы, только имя устройства или точку монтирования.
+
+`sync` и `async`
+>Следует ли выполнять все операции ввода-вывода с файловой системой синхронно или асинхронно. `async` обычно используется по умолчанию. Страница руководства по `mount` предупреждает, что использование `sync` на носителе с ограниченным числом циклов записи (например, флэш-накопителях или картах памяти) может сократить срок службы устройства.
+
+
+# Использование UUID и меток
