Update 104.3 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.3 Control mounting and unmounting of filesystem/104.3 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.3 Control mounting and unmounting of filesystem/104.3 Lesson 1.md
@@ -371,6 +371,123 @@ WantedBy=multi-user.target
 ```
 
 # Упражнения для закрепления
+
+1. Используя mount, как вы можете смонтировать файловую систему ext4 на `/dev/sdc1` в `/mnt/external` как доступную только для чтения, используя параметры `noatime` и `async`?
+2. При размонтировании файловой системы в `/dev/sdd2` вы получаете сообщение об ошибке `target is busy`. Как узнать, какие файлы в файловой системе открыты и какие процессы открывали их?
+3. Рассмотрим следующую запись в `/etc/fstab`: `/dev/sdb1 /data ext4 noatime, noauto, async`. Будет ли эта файловая система смонтирована, если будет введена команда `mount -a`? Почему?
+4. Как узнать UUID файловой системы в `/dev/sdb1`?
+5. Как вы можете использовать `mount` для перемонтирования файловой системы exFAT в режиме «только чтение» с UUID `6e2c12e3-472d-4bac-a257-c49ac07f3761`, смонтированной в `/mnt/data`?
+6. Как получить список всех файловых систем `ext3` и `ntfs`, смонтированных в настоящее время в системе?
+
+
 # Упражнения на размышления
+
+1. Рассмотрим следующую запись в `/etc/fstab`: `/dev/sdc1 /backup ext4 noatime, nouser, async`. Может ли пользователь смонтировать эту файловую систему с помощью команды `mount /backup`? Почему?
+2. Рассмотрим удаленную файловую систему, смонтированную в `/mnt/server`, которая стала недоступной из-за потери сетевого подключения. Как вы могли заставить его быть размонтированным или монтируемым только для чтения, если это невозможно?
+3. Напишите запись в `/etc/fstab`, которая будет монтировать том `btrfs` с меткой Backup на `/mnt/backup`, с параметрами по умолчанию и без разрешения выполнения из него двоичных файлов.
+4. Рассмотрим следующий модуль монтирования `systemd`:
+```
+[Unit]
+Description=External data disk
+
+[Mount]
+What=/dev/disk/by-uuid/56C11DCC5D2E1334
+Where=/mnt/external
+Type=ntfs
+Options=defaults
+
+[Install]
+WantedBy=multi-user.target
+```
+Что было бы эквивалентной записью в `/etc/fstab` для этой файловой системы?
+
+5. Каким должно быть имя файла для указанного выше модуля, чтобы его могла использовать `systemd`? Где его разместить?
+
+
+# Резюме
+
+В этом уроке вы узнали, как монтировать и размонтировать файловые системы вручную или автоматически. Вот некоторые из объясненных команд и концепций:
+
+* `mount` (устанавливает устройство в определенное место) 
+* `umount` (отключает устройство) 
+* `lsof` (перечисляет процессы, обращающиеся к файловой системе) 
+* `/mnt` и `/media` каталоги 
+* `/etc/fstab`
+* `lsblk` (перечисляет тип и UUID файловой системы) 
+* Как смонтировать файловую систему, используя ее UUID или метку. 
+* Как смонтировать файловую систему с помощью модулей монтирования systemd. 
+* Как автоматически смонтировать файловую систему с помощью модулей монтирования systemd.
+
 # Ответы на упражнения для закрепления
+
+1. Используя mount, как вы можете смонтировать файловую систему ext4 на `/dev/sdc1` в `/mnt/external` как доступную только для чтения, используя параметры `noatime` и `async`?
+```
+# mount -t ext4 -o noatime,async,ro /dev/sdc1 /mnt/external
+```
+2. При размонтировании файловой системы в `/dev/sdd2` вы получаете сообщение об ошибке `target is busy`. Как узнать, какие файлы в файловой системе открыты и какие процессы открывали их?
+
+Используйте lsof, за которым следует имя устройства:
+```
+$ lsof /dev/sdd2
+```
+
+3. Рассмотрим следующую запись в `/etc/fstab`: `/dev/sdb1/data ext4 noatime, noauto, async`. Будет ли эта файловая система смонтирована, если будет введена команда `mount -a`? Почему?
+
+Он не будет установлен. Ключ `noauto` - это параметр, котрый означает, что эта запись игнорируется командой `mount -a`.
+
+4. Как узнать UUID файловой системы в `/dev/sdb1`?
+
+Используйте `lsblk -f`, за которым следует имя файловой системы:
+```
+$ lsblk -f /dev/sdb1
+```
+5. Как вы можете использовать `mount` для перемонтирования файловой системы exFAT в режиме «только чтение» с UUID `6e2c12e3-472d-4bac-a257-c49ac07f3761`, смонтированной в `/mnt/data`?
+
+Поскольку файловая система смонтирована, вам не нужно беспокоиться о типе файловой системы или идентификаторе, просто используйте параметр remount с параметром ro (только для чтения) и точкой монтирования:
+```
+# mount -o remount,ro /mnt/data
+```
+6. Как получить список всех файловых систем `ext3` и `ntfs`, смонтированных в настоящее время в системе?
+
+Используйте команду `mount -t`, за которой следует список файловых систем, разделенных запятыми:
+```
+# mount -t ext3,ntfs
+```
+
+
 # Ответы на упражнения для размышления
+
+1. Рассмотрим следующую запись в `/etc/fstab`: `/dev/sdc1 /backup ext4 noatime, nouser, async`. Может ли пользователь смонтировать эту файловую систему с помощью команды `mount /backup`? Почему?
+
+Нет, параметр `nouser` не позволит обычным пользователям монтировать эту файловую систему.
+
+2. Рассмотрим удаленную файловую систему, смонтированную в `/mnt/server`, которая стала недоступной из-за потери сетевого подключения. Как вы могли заставить его быть размонтированным или монтируемым только для чтения, если это невозможно?
+
+Передайте параметры `-f` и `-r` для размонтирования. Команда будет выглядеть так: `umount -f -r /mnt/server`. Помните, что вы можете группировать параметры, поэтому `umount -fr /mnt/server` также будет работать.
+
+3. Напишите запись в `/etc/fstab`, которая будет монтировать том `btrfs` с меткой Backup на `/mnt/backup`, с параметрами по умолчанию и без разрешения выполнения из него двоичных файлов.
+
+Строка должна быть `LABEL=Backup /mnt/backup btrfs defaults, noexec`.
+
+4. Рассмотрим следующий модуль монтирования `systemd`:
+```
+[Unit]
+Description=External data disk
+
+[Mount]
+What=/dev/disk/by-uuid/56C11DCC5D2E1334
+Where=/mnt/external
+Type=ntfs
+Options=defaults
+
+[Install]
+WantedBy=multi-user.target
+```
+Что было бы эквивалентной записью в `/etc/fstab` для этой файловой системы?
+
+Запись будет такой: `UUID = 56C11DCC5D2E1334 /mnt/external ntfs defaults`.
+
+
+5. Каким должно быть имя файла для указанного выше модуля, чтобы его могла использовать `systemd`? Где его разместить?
+
+Имя файла должно совпадать с точкой монтирования, поэтому `mnt-external.mount` помещается в `/etc/systemd/system`.
